/* Copyright 2022 The MediaPipe Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto2";

// TODO: consolidate TensorToSegmentationCalculator.
package mediapipe.tasks;

import "mediapipe/framework/calculator_options.proto";
import "mediapipe/tasks/cc/vision/image_segmenter/proto/segmenter_options.proto";
import "mediapipe/util/label_map.proto";

option java_package = "com.google.mediapipe.tasks";
option java_outer_classname = "TensorsToSegmentationCalculatorOptionsProto";

message TensorsToSegmentationCalculatorOptions {
  extend mediapipe.CalculatorOptions {
    optional TensorsToSegmentationCalculatorOptions ext = 458105876;
  }

  optional mediapipe.tasks.vision.image_segmenter.proto.SegmenterOptions
      segmenter_options = 1;

  // Identifying information for each classification label.
  map<int64, mediapipe.LabelMapItem> label_items = 2;
}
